完成了spring-cloud的服务注册中心的集群模式demo

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>config-client</module>
         <module>config-server-autorefresh</module>
         <module>config-client-autorefresh</module>
+        <module>eureka-server-cluster</module>
     </modules>
 
     <parent>
