--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -18,7 +18,15 @@
     </properties>
 
     <dependencies>
-
+        <!--引入eureka-server-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
