解决zipkin引起的依赖冲突；搭建自己的zipkin服务(官方不推荐自己搭建)

--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!--引入eureka-server-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
