--- a/eureka-service-provider/src/main/resources/application.yml
+++ b/eureka-service-provider/src/main/resources/application.yml
@@ -3,11 +3,28 @@ server:
 spring:
   application:
     name: spring-cloud-eureka-service-provider
+  zipkin:
+#    base-url: http://localhost:9411
+    sender:
+      type: rabbit
+  sleuth:
+    sampler:
+      probability: 1.0
+  rabbitmq:
+    host: localhost
+    port: 5672
+    listener: #配置重试策略
+      direct:
+        retry:
+          enabled: true
+      simple:
+        retry:
+          enabled: true
 eureka:
   client:
     #指定服务注册中心地址
     serviceUrl:
       #单机模式
-#      defaultZone: http://localhost:8000/eureka/
+      defaultZone: http://localhost:8000/eureka/
       #集群模式
-      defaultZone: http://admin:123456@eureka1:8001/eureka/,http://admin:123456@eureka2:8002/eureka/,http://admin:123456@eureka3:8003/eureka/
+#      defaultZone: http://admin:123456@eureka1:8001/eureka/,http://admin:123456@eureka2:8002/eureka/,http://admin:123456@eureka3:8003/eureka/
